header's offer image top shift fix

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -90,6 +90,7 @@
     &__offer {
         position: relative;
         max-width: 220px;
+        margin-top: 35px;
         padding: 83px 27px 27px;
         border-radius: 17px;
         background-color: #f5f5fb;
@@ -97,7 +98,7 @@
 
     &__offer-image {
         position: absolute;
-        top: -15%;
+        top: -35px;
         left: 50%;
         transform: translateX(-50%);
         display: block;
